<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signup"
    android:orientation="vertical"
    tools:context=".signup">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="160dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/recover"
        android:textColor="#000000"
        android:textSize="45sp"
        tools:ignore="DuplicateIds" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/account"
        android:textColor="#000000"
        android:textSize="45sp" />

    <EditText
        android:id="@+id/emailrecover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="35dp"
        android:autofillHints=""
        android:background="@drawable/textfillbg"
        android:ems="10"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:outlineProvider="none"
        android:paddingStart="20dp"
        android:textColor="#000000"
        android:textColorHint="#6F6F6F"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="150dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="135dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="190dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/open_website"
        android:textAlignment="center"
        android:textSize="28sp"
        tools:ignore="DuplicateIds" />

    <ImageButton
        android:id="@+id/openWenPage"
        android:layout_width="64dp"
        android:layout_height="47dp"
        android:layout_marginStart="175dp"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/todo"
        android:scaleType="center"
        app:srcCompat="@drawable/button"
        tools:ignore="InvalidId" />


</LinearLayout>